<resources>
    <string name="app_name">Focus Notify</string>
    <string name="title_activity_add_item">Add Note</string>
    <string name="reminder_text">What do you want to remember?</string>
    <string name="help_feedback">Help &amp; FeedBack</string>
    <string name="action_archive">Archive</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="attention">Warning</string>
    <string name="ask_exit">Are you sure you want to discard changes</string>
    <string name="ask_delete_img">Are you sure you want to remove this image</string>
    <string name="error">Error!</string>
    <string name="reminder_added">Note Added</string>
    <string name="reminder_modified">Note Updated</string>
    <string name="ask_delete_reminder">Delete this Note</string>
    <string name="reminder_deleted">Note Deleted</string>
    <string name="action_share">Share</string>
    <string name="name_unset">You</string>
    <string name="num_items_todo">You have %1$s items to do</string>
    <string name="action_exit_editor">Discard</string>
    <string name="title_notification_add">Activate Focus Notify</string>
    <string name="summary_add_notification">Enable Focus Noity and check your notifications</string>
    <string name="app_enabled">Focus Notify enabled</string>
    <string name="app_disabled">Focus Notify disabled</string>
    <string name="created_on">Created on</string>
    <string name="created_at">Created at</string>
    <string name="no_items">No item to complete, add a new one!</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="action_call">Call</string>
    <string name="action_sms_c">SMS</string>
    <string name="action_mail_c">Mail</string>
    <string name="action_sms">Send sms</string>
    <string name="action_mail">Send Mail</string>
    <string name="choose_img">Select Image</string>
    <string name="action_rate">Rate Focus Notify</string>
    <string name="action_rate_subtitle">Rate in Google Play Store</string>
    <string name="actiong_gift_coffee">Help developers</string>
    <string name="action_gift_coffee_subtitle">Give us a coffee to start the day</string>
    <string name="action_feedback_subtitle">Help us improve thanks to your feedback</string>
    <string name="focus_app">Focus</string>
    <string name="action_download_focus_app">Download full app from Google Play Store</string>
    <string name="title_app_and_develop">Applications and Development</string>
    <string name="title_actions">Actions and features</string>
    <string name="title_action_help">Add actions</string>
    <string name="subtitle_action_help">Write some key words (like call, sms...) and choose the contact you want</string>
    <string name="title_feature_image">Add image</string>
    <string name="subtitle_feature_image">Choose an image from gallery and add to your note</string>
    <string name="title_feature_url">Web link shortcut</string>
    <string name="subtitle_feature_url">Links are recognized automatically and an action is added to make all faster</string>
    <string name="title_available_actions">Available Actions</string>
    <string name="action_hide_all">Hide all notes</string>
    <string name="action_view_all">Show all notes</string>
    <string name="title_feature_hide">Hide all notes</string>
    <string name="subtitle_features_hide">When you do not need close temporarily your notes and keep secrets hidden</string>
    <string name="title_tab_settings">Settings</string>
    <string name="title_tab_features">Features</string>
    <string name="title_tab_developer">About</string>
    <string name="title_widget_section">Widget Settings</string>
    <string name="title_popup_settings">Popup Settings</string>
    <string name="style_deafult">Default</string>
    <string name="style_material_dark">Material Dark</string>
    <string name="style_material_light">Material Light</string>
    <string name="title_popup_style">Popup Style</string>
    <string name="text_loading">Loading...</string>
    <string name="title_widget_style">Widget Style</string>
    <string name="add_widget">Add Widget</string>
    <string name="title_customize_settings">Style Settings</string>
    <string name="title_notification_settings">Notifications Settings</string>
    <string name="title_notification_preferences">Alarm Notification Preferences</string>
    <string name="text_vibrate">Vibrate</string>
    <string name="text_led">LED</string>
    <string name="text_sound">Sound</string>
    <string name="text_no_preferences">No preferences activated</string>
    <string name="text_today">Today</string>
    <string name="text_tomorrow">Tomorrow</string>
    <string name="text_yesterday">Yesterday</string>
    <string name="alarm_repeat_day">Every day</string>
    <string name="alarm_repeat_week">Every week</string>
    <string name="alarm_repeat_month">Every month</string>
    <string name="alarm_repeat_year">Every year</string>
    <string name="alarm_repeat_not">Does not repeat</string>
    <string name="ask_delete_alarm">Remove this alarm</string>
    <string name="error_old_date">Error: old date not supported</string>
    <string name="text_author">Tommaso Berlose</string>
    <string name="text_version">v</string>
    <string name="title_feature_widget">Customizable widget</string>
    <string name="subtitle_feature_widget">Don\'t you like notifications?\nHide them all and add the widget</string>
    <string name="title_feature_alarm">Recurring Reminders</string>
    <string name="subtitle_feature_alarm">Add your reminder most important and do not forget nothing more</string>
    <string name="action_remove">Remove</string>
    <string name="error_contact_not_found">Contact info not found</string>
    <string name="subtitle_app">your mind</string>
    <string name="title_slide3">Reminders</string>
    <string name="summary_slide3">Add your reminder most important and do not forget nothing more</string>
    <string name="title_slide4">Smart</string>
    <string name="summary_slide4">Actions, images, automatic recognition web links and more ...</string>
    <string name="summary_slide2">Enter your notes between notifications and keep everything under control!</string>
    <string name="title_slide2">You just need a tap</string>
    <string name="title_lock">Protect your notes</string>
    <string name="subtitle_lock_active">Password lock enabled</string>
    <string name="subtitle_lock_inactive">Password lock disabled</string>
    <string name="text_password">Password</string>
    <string name="title_add_pasw">Insert Password</string>
    <string name="subtitle_add_pasw">Add a word to be used as a password to protect content of this note, title still be visible</string>
    <string name="action_lock">Lock Note</string>
    <string name="action_unlock">Unlock Note</string>
    <string name="error_password">Error: wrong password</string>
    <string name="title_activity_password_check">Insert Password</string>
    <string name="action_settings">Settings</string>
    <string name="title_app_settings">Application Settings</string>
    <string name="title_view_intro">Application Intro</string>
    <string name="subtitle_view_intro">View application intro again</string>
    <string name="warning_pasw">Attention: If you enter a password will be blocked ALL the notes and in case you do not remember you will need to reset them all</string>
    <string name="title_reset">Reset Password</string>
    <string name="subtitle_reset">Attention: ALL your notes with password will be deleted if it is confirmed this procedure</string>
    <string name="text_pasw_reset">All notes deleted and password reset</string>
    <string name="ask_reset_pasw">Are you sure you want to delete all of your notes and reset the password?</string>
    <string name="action_reset">Reset</string>
    <string name="text_first_use">Welcome and thank you for downloading Focus Notify.\n\nTo start adding notes pull down the notification bar.</string>
    <string name="title_order">Sort Notifications</string>
    <string name="subtitle_order">Choose what to display with higher priority</string>
    <string name="title_preferences_share">Share Button</string>
    <string name="subtitle_preferences_share">Add an option to each note to share them faster</string>
    <string name="title_preferences_ongoing">Ongoing Notifications</string>
    <string name="subtitle_preferences_ongoing">Prevent the erroneous deletion of a note by blocking the swipe of notification</string>
    <string name="action_snooze">Snooze</string>
    <string name="text_reminded_on">Reminded on</string>
    <string name="text_reminded_at">Reminded at</string>
    <string name="text_snoozed_to">Snoozed to</string>
    <string name="text_snoozed_to_hour">Snoozed to</string>
    <string name="action_community">Focus Lite Community</string>
    <string name="action_community_subtitle">Help, feedback and suggestions</string>
    <string name="text_big_notification">Full Content</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_list_show">Show checkboxes</string>
    <string name="action_list_hide">Hide checkboxes</string>
    <string name="text_locked_note">Protected Content</string>
    <string name="text_camera">Camera</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_contact">Contact</string>
    <string name="text_note_info">Note Details</string>
    <string name="text_creation_date">Creation Date</string>
    <string name="text_last_changed">Last Changed</string>
    <string name="subtitle_info_note">List of main technical information of this note, if you notice any discrepancy consider using a password.</string>
    <string name="text_never">Never</string>
    <string name="ask_replace_img">Are you sure you want to replace this image</string>
    <string name="action_replace">Replace</string>
    <string name="action_click_contact">Open contact information</string>
    <string name="ask_replace_contact">Are you sure you want to replace the contact selected</string>
    <string name="action_keep">Keep</string>
    <string name="ask_keep_checked_item">Do you want to keep checked items</string>
    <string name="action_add_item">Add Item</string>
    <string name="ask_remove_contact">Are you sure you want to remove the contact selected</string>
    <string name="error_title">Error, insert title</string>
    <string name="title_custom_sound">Custom Notification Sound</string>
    <string name="title_show_add_notification">"New note" Notification Visibility</string>
    <string name="subtitle_show_add_notification">Show always "new note" notification also when there\'re no notes</string>
    <string name="title_section_alarm">Alarms Settings</string>
    <string name="title_persistent_sound">Persistent Reminder Notification</string>
    <string name="subtitle_persistent_sound">Make reminder notifications persistent and use them like alarms</string>
    <string name="title_twelve_hour">Use 12-hour Format</string>
    <string name="subtitle_twelve_hour">Use 12-hour format instead of 24-hour format</string>
    <string name="title_notification_preference">Notification Preferences</string>
    <string name="text_reminded_date">Note reminded on</string>
    <string name="text_choose_attach">Choose Attachment</string>
    <string name="text_location">Location</string>
    <string name="text_choose_reminder_type">Choose Reminder Type</string>
    <string name="action_edit_location">Edit Location</string>
    <string name="subtitle_enter_address">Please enter a valid address to start the navigator quickly or to remind your interesting places</string>
    <string name="action_unarchive">Unarchive</string>
    <string name="action_priority">Add to favorites</string>
    <string name="title_note_preferences">Note Preferences</string>
</resources>