<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MyDialog">
    <item
        android:id="@+id/action_reminder"
        android:orderInCategory="50"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_social_notifications_dialog"
        android:title="@string/text_choose_reminder_type" />
    <item
        android:id="@+id/action_attach"
        android:orderInCategory="55"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_attach_dialog"
        android:title="@string/text_choose_attach" />
    <item
        android:id="@+id/action_priority"
        android:orderInCategory="65"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_toggle_star_dialog"
        android:title="@string/action_priority" />
    <item
        android:id="@+id/action_list"
        android:orderInCategory="80"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_preferences"
        android:title="@string/title_note_preferences" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="95"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_social_share_dialog"
        android:title="@string/action_share" />
    <item
        android:id="@+id/action_archive"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_content_archive_dialog"
        android:title="@string/action_archive" />
    <item
        android:id="@+id/action_unarchive"
        android:orderInCategory="105"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_unarchive_dialog"
        android:title="@string/action_unarchive" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="110"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_action_delete_dialog"
        android:title="@string/action_delete" />
</menu>