<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/action_edit_location"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/subtitle_enter_address"
                android:id="@+id/subtitle_address"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_location"
                android:textAllCaps="true"
                android:padding="16dp"
                android:background="@color/back_select"
                android:id="@+id/address"
                android:inputType="textPostalAddress|textCapWords"
                android:gravity="center_vertical"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right|center_vertical"
                android:paddingRight="8dp"
                android:paddingLeft="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:id="@+id/action_remove"
                    android:textAppearance="?android:attr/textAppearanceButton"
                    android:textColor="@color/primary"
                    android:text="@string/action_remove"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:id="@+id/action_save"
                    android:textAppearance="?android:attr/textAppearanceButton"
                    android:textColor="@color/primary"
                    android:text="@string/action_save"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>