<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_add_pasw"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/subtitle_add_pasw"
                android:id="@+id/subtitle_pasw"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_password"
                android:textAllCaps="true"
                android:padding="16dp"
                android:background="@color/back_select"
                android:id="@+id/pasw"
                android:inputType="textPassword"
                android:gravity="center_vertical"
                android:textColor="@color/primary_text"
                android:textColorHint="@color/secondary_text"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>