<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:id="@+id/toolbar">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/primary_text"
            android:text="@string/title_tab_developer"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/action_close" />
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_action_navigation_close"
            android:tint="@color/primary_text"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:id="@+id/action_close"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/back_selected_item"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/action_rate_app">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/title_version"
                    android:layout_toEndOf="@+id/imageView4"
                    android:layout_toRightOf="@+id/imageView4" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text"
                    android:text="@string/action_rate_subtitle"
                    android:layout_below="@+id/title_version"
                    android:layout_toEndOf="@+id/imageView4"
                    android:layout_toRightOf="@+id/imageView4" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/action_open_focus"
                android:visibility="gone">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/focus_app"
                    android:id="@+id/textView"
                    android:layout_toEndOf="@+id/imageView"
                    android:layout_toRightOf="@+id/imageView" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text"
                    android:text="@string/action_download_focus_app"
                    android:layout_below="@+id/textView"
                    android:layout_toEndOf="@+id/imageView"
                    android:layout_toRightOf="@+id/imageView"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/action_gift_cafe">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/actiong_gift_coffee"
                    android:id="@+id/textView2"
                    android:layout_toEndOf="@+id/img_cafe"
                    android:layout_toRightOf="@+id/img_cafe" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text"
                    android:text="@string/action_gift_coffee_subtitle"
                    android:layout_below="@+id/textView2"
                    android:layout_toEndOf="@+id/img_cafe"
                    android:layout_toRightOf="@+id/img_cafe"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                android:id="@+id/action_community">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/action_community"
                    android:id="@+id/textView18"
                    android:layout_toEndOf="@+id/img_community"
                    android:layout_toRightOf="@+id/img_community" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text"
                    android:text="@string/action_community_subtitle"
                    android:layout_below="@+id/textView18"
                    android:layout_toEndOf="@+id/img_community"
                    android:layout_toRightOf="@+id/img_community"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>